<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:layout_marginHorizontal="16dp"
    android:layout_marginVertical="16dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/img_avatar"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:contentDescription="@string/avatar"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tx_username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:fontFamily="@font/rembold"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/img_avatar"
            app:layout_constraintEnd_toEndOf="@id/img_avatar"
            app:layout_constraintStart_toStartOf="@+id/img_avatar"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/tx_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceBody2"
            android:fontFamily="@font/remregular"
            android:textColor="@color/black"
            android:ellipsize="end"
            android:maxLines="3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tx_username"
            tools:text="@string/description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>