<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="Detail"
        app:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/baseline_arrow_back_24"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        tools:context=".view.detail.DetailActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/avatar"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                android:id="@+id/tx_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/black"
                android:textAppearance="?attr/textAppearanceHeadline6"
                android:fontFamily="@font/rembold"
                app:layout_constraintTop_toBottomOf="@id/img_profile"
                app:layout_constraintEnd_toEndOf="@id/img_profile"
                app:layout_constraintStart_toStartOf="@+id/img_profile"
                tools:text="@string/username" />

            <TextView
                android:id="@+id/tx_created_at"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                tools:text="@string/created_at"
                android:fontFamily="@font/remregular"
                android:layout_marginTop="8dp"
                android:layout_marginStart="16dp"
                android:textAppearance="?attr/textAppearanceBody2"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tx_username" />


            <TextView
                android:id="@+id/tx_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody2"
                android:fontFamily="@font/remregular"
                android:textColor="@color/black"
                android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tx_created_at"
                tools:text="@string/description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</RelativeLayout>
